--- a/frontend/Tasklists/css/home.css
+++ b/frontend/Tasklists/css/home.css
@@ -2,7 +2,8 @@ header {
     color: white;
     text-align: center;
     margin: 50px;
-    height: 300px;
+    min-width: min-content;
+    min-height: 300px;
     margin-left: auto;
     margin-right: auto;
     padding: 50px;
