--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -66,9 +66,12 @@ header {
 }
 
 .projectContent:hover {
-    color: rgb(0, 110, 255);
     border: 1px solid rgb(0, 110, 255);
     cursor: pointer;
+}
+
+.projectContent:hover p {
+    color: rgb(0, 110, 255);
 }
 
 .projectName {
@@ -95,4 +98,20 @@ header {
 .sectionContent {
     text-align: left;
     padding-left: 50px;
+}
+
+.userActionButton {
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    cursor: pointer;
+    color: white;
+    border-left: 1px solid white;
+    border-bottom: 1px solid white;
+    border-bottom-left-radius: 5px;
+    background: rgba(0, 0, 0, 0.5);
 }
