--- a/frontend/css/homeShared.css
+++ b/frontend/css/homeShared.css
@@ -28,7 +28,19 @@ a {
    width: fit-content;
    margin-left: 25px;
    border-radius: 17px;
-   border: 2px solid rgb(200,0,0);
+   border: 2px solid rgb(200, 0, 0);
+}
+
+.success {
+    color: rgb(0, 150, 0);
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: fit-content;
+    margin-left: 25px;
+    border-radius: 17px;
+    border: 2px solid rgb(0, 150, 0);
 }
 
 body {
