--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -110,6 +110,7 @@ header {
     padding-bottom: 15px;
     cursor: pointer;
     color: white;
+    border: 0px;
     border-left: 1px solid white;
     border-bottom: 1px solid white;
     border-bottom-left-radius: 5px;
