--- a/frontend/css/login-signup.css
+++ b/frontend/css/login-signup.css
@@ -59,3 +59,20 @@
     align-self: center;
     padding: 10px;
 }
+
+.homePageButton {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    cursor: pointer;
+    color: white;
+    border: 0px;
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+    border-bottom-right-radius: 5px;
+    background: rgba(0, 0, 0, 0.5);
+}
