Get the forgot password page going

--- a/frontend/css/userStuff.css
+++ b/frontend/css/userStuff.css
@@ -41,6 +41,7 @@
     width: 25%;
     min-width: fit-content;
     height: min-content;
+    align-self: center;
     color: white;
     font-size: 16pt;
     text-align: center;
