--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -104,6 +104,7 @@ header {
     position: fixed;
     top: 0;
     right: 0;
+    text-align: center;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 15px;
@@ -115,4 +116,23 @@ header {
     border-bottom: 1px solid white;
     border-bottom-left-radius: 5px;
     background: rgba(0, 0, 0, 0.5);
+}
+
+.userActionButtonContainer {
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.userActionButton.middle {
+    position: relative;
+    border-bottom-left-radius: 0px;
+    top:auto;
+}
+
+.userActionButton.bottom {
+    position: relative;
+    top:auto;
 }
