--- a/frontend/css/homeShared.css
+++ b/frontend/css/homeShared.css
@@ -26,6 +26,7 @@ a {
    padding-left: 5px;
    padding-right: 5px;
    width: fit-content;
+   margin: 5px;
    margin-left: 25px;
    border-radius: 17px;
    border: 2px solid rgb(200, 0, 0);
@@ -38,6 +39,7 @@ a {
     padding-left: 5px;
     padding-right: 5px;
     width: fit-content;
+    margin: 5px;
     margin-left: 25px;
     border-radius: 17px;
     border: 2px solid rgb(0, 150, 0);
