--- a/frontend/css/userStuff.css
+++ b/frontend/css/userStuff.css
@@ -70,8 +70,26 @@
     border: 1px solid rgb(0, 110, 255);
 }
 
+.inputButton.red {
+    color: rgb(200, 0, 0);
+    border: 1px solid rgb(200, 0, 0);
+}
+
+.inputButton.red:hover {
+    color: rgb(255, 0, 0);
+    border: 1px solid rgb(255, 0, 0);
+}
+
 .miniButton {
     align-self: center;
+    padding: 10px;
+}
+
+.deleteButton {
+    top: 10px;
+    right: 10px;
+    position: absolute;
+    width: min-content;
     padding: 10px;
 }
 
