--- a/frontend/css/tasklists.css
+++ b/frontend/css/tasklists.css
@@ -145,6 +145,30 @@
     border: 2px solid rgb(37, 65, 226);
 }
 
+.addListContainer {
+    margin-top: 10px;
+}
+
+.addList {
+    width: 85%;
+    padding: 5px;
+    margin-right: 2px;
+    vertical-align: middle;
+    resize: none;
+    font-size: 16px;
+    font-family: Helvetica, sans-serif;
+    text-align: start;
+    border-radius: 5px;
+    border: 2px solid black;
+    background-color:rgb(248, 248, 250);
+}
+
+.addList:focus {
+    outline: 0px;
+    border-radius: 5px;
+    border: 2px solid lightblue;
+}
+
 .tasklist {
     padding: 10px;
     margin: auto;
@@ -182,6 +206,7 @@
 }
 
 .addTaskContainer {
+    margin-top: 5px;
     margin-left: 5px;
     margin-right: 5px;
 }
@@ -262,6 +287,7 @@ body {
 
 .wideButton {
     color: white;
+    margin-top: 5px;
     margin-left: 5px;
     margin-right: 5px;
     background-color: rgb(53, 109, 192);
@@ -278,6 +304,13 @@ body {
 
 .wideButton:hover:active {
     background-color: rgb(37, 65, 226);
+}
+
+.listOfLists .wideButton {
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: rgb(48, 83, 255)
 }
 
 .alertBackgroundContainer {
